chore: migrate to self-hosted denokv

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,16 @@
-.git/
-.github/
-.vscode/
-.DS_Store
-.gitignore
+# see: https://docs.docker.com/go/build-context-dockerignore
+
+**/.git/
+**/.github/
+**/.vscode/
+**/node_modules/
+**/.dockerignore
+**/.DS_Store
+**/.env
+**/.gitignore
+**/*.log
+**/compose.y*ml
+**/docker-compose*
+**/Dockerfile*
+LICENSE*
 README.md
-*.log
