--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "@atcute/bluesky": "npm:@atcute/bluesky@^2.0.1",
     "@atcute/client": "npm:@atcute/client@^3.0.1",
     "@olli/kvdex": "jsr:@olli/kvdex@^3.3.0",
+    "@std/async": "jsr:@std/async@^1.0.12",
     "ky": "npm:ky@^1.8.1",
     "zod": "npm:zod@^3.24.0"
   },
